--- a/packages/sandbox-client/src/styles/root.css
+++ b/packages/sandbox-client/src/styles/root.css
@@ -1,7 +1,13 @@
 :root {
+  font-size: 16px;
+
   --c-primary-1: #fff;
   --c-primary-2: #ddd;
   --c-primary-3: #bbb;
   --c-primary-4: #999;
-  --c-opposite: #000;
+  --c-opposite-1: #000;
+  --c-opposite-2: #222;
+  --c-opposite-3: #444;
+  --c-ok-1: #35b049;
+  --c-critical-1: #ba1c1c;
 }
