--- a/packages/sandbox-client/src/app/Loader.css
+++ b/packages/sandbox-client/src/app/Loader.css
@@ -1,14 +1,18 @@
 .Loader {
-  position: absolute;
-  left: calc(50% - 16px);
-  top: calc(50% - 16px);
-  z-index: 1;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.Loader::after {
   width: 32px;
   height: 32px;
   border: 4px solid #f3f3f3;
   border-radius: 50%;
   border-top: 4px solid #3498db;
   animation: spin 2s linear infinite;
+  content: '';
 }
 
 @keyframes spin {
